Name:          rpnCalc
Version:       0.1
Category:      Example
Synopsis:      An example of how to use HConf to dynamically recompile a simple program.

Homepage:      http://github.com/willdonnelly/hconf-example
Bug-Reports:   http://github.com/willdonnelly/hconf-example/issues
Stability:     alpha
Author:        Will Donnelly
Maintainer:    Will Donnelly <will.donnelly@gmail.com>
Copyright:     (c) 2009 Will Donnelly

Build-Type:    Simple
Cabal-Version: >= 1.2

library
  exposed-modules: RPN,
                   RPN.Main,
                   RPN.Boot,
                   RPN.State,
                   RPN.Config
  other-modules:   Paths_rpnCalc
  build-depends:   base, hconf

executable rpnCalc
  build-depends:   base, hconf
  main-is:         Main.hs

source-repository head
  type:      git
  location:  git://github.com/willdonnelly/hconf-example.git
